hero section done

--- a/style.css
+++ b/style.css
@@ -30,10 +30,6 @@ p{
     text-decoration: none;
 }
 
-.container{
-    /* width: 75%; */
-}
-
 /* global css end */
 
 .container-bg{
@@ -44,11 +40,13 @@ p{
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 50px 10% 0px;
+    gap: 97px;
 }
 
-/* .hero-info{
-    width: 70%;
-} */
+.hero-info{
+    width: 45%;
+}
 
 .hero-info h1{
     font-family: 'Lato', sans-serif;
@@ -60,10 +58,8 @@ p{
 }
 
 .hero-info p{
-    margin-bottom: 40px;
+    margin-bottom: 52px;
+    margin-top: 52px;
 }
 
-/* .hero-image {
-    width: 30%;
-} */
 
