--- a/style.css
+++ b/style.css
@@ -3,13 +3,13 @@
 *{
     margin: 0;
     padding: 0;
+    font-family: 'Lato', sans-serif;
 }
 
 /* global css start */
 
 p{
     color: rgba(39, 39, 39, 0.60);
-    font-family: 'Lato', sans-serif;
     font-size: 18px;
     font-style: normal;
     font-weight: 400;
@@ -22,7 +22,6 @@ p{
     padding: 20px 43px;
     border-radius: 8px;
     color: #FFF;
-    font-family: 'Lato', sans-serif;
     font-size: 20px;
     font-style: normal;
     font-weight: 700;
@@ -45,11 +44,10 @@ p{
 }
 
 .hero-info{
-    width: 45%;
+    width: 650px;
 }
 
 .hero-info h1{
-    font-family: 'Lato', sans-serif;
     color: #272727;
     font-size: 80px;
     font-style: normal;
@@ -69,11 +67,88 @@ p{
 
 .hero-info h2{
     color: #272727;
-    font-family: 'Lato', sans-serif;
     font-size: 40px;
     font-style: normal;
     font-weight: 800;
     line-height: normal;
+}
+
+.feature-container{
+    padding-top: 178px;
+}
+
+.feature-info{
+    display: block;
+    text-align: center;
+}
+
+.feature-info h2{
+    color: #272727;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+    padding-bottom: 24px;
+}
+
+.feature-flowers-container{
+    display: flex;
+    justify-content: center;
+    gap: 24px;
+    padding-top: 48px;
+}
+
+.flower-box-1{
+    width: 464px;
+    height: 538px;
+    background-color: rgba(167, 33, 98, 0.15);
+    border-radius: 300px 300px 0px 0px;
+    display: absolute;
+}
+
+.flower-box-1 img{
+    position: relative;
+    top: 110px;
+    left: 76px;
+}
+
+.flower-box-2{
+    width: 464px;
+    height: 538px;
+    background-color: rgba(5, 151, 160, 0.15);
+    border-radius: 300px 300px 0px 0px;
+    display: absolute;
+}
+
+.flower-box-2 img{
+    position: relative;
+    top: 117px;
+    left: 47px;
+}
+
+.flower-box-3{
+    width: 464px;
+    height: 538px;
+    background-color: rgba(71, 125, 17, 0.15);
+    border-radius: 300px 300px 0px 0px;
+    display: absolute;
+}
+
+.flower-box-3 img{
+    position: relative;
+    top: 67px;
+    left: 75px;
+}
+
+.feature-flowers p{
+    text-align: center;
+    text-decoration: underline;
+    color: #272727;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 35px;
+    padding-top: 32px;
 }
 
 .sale-container{
