--- a/style.css
+++ b/style.css
@@ -75,6 +75,7 @@ p{
 
 .feature-container{
     padding-top: 178px;
+    padding-bottom: 178px;
 }
 
 .feature-info{
@@ -157,4 +158,15 @@ p{
 
 .sale-container div p{
     margin-top: 24px;
+}
+
+.insta-container{
+    padding: 128px 0px;
+}
+
+.flower-images{
+    display: flex;
+    justify-content: center;
+    gap: 24px;
+    padding-top: 48px;
 }
