--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ p{
     line-height: normal;
 }
 
-.hero-info p{
+.hero-info p, .footer-info p{
     margin-bottom: 60px;
     margin-top: 52px;
 }
@@ -65,7 +65,7 @@ p{
     text-align: center;
 }
 
-.hero-info h2{
+.hero-info h2, .footer-info h2{
     color: #272727;
     font-size: 40px;
     font-style: normal;
@@ -199,6 +199,27 @@ p{
 input::placeholder{
     color: rgba(39, 39, 39, 0.60);
     font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+footer{
+    background: #111010;
+    padding: 128px 0px;
+
+}
+
+.footer-info > p{
+    color: #fff;
+    opacity: 0.9;
+    margin: 0;
+    padding: 24px 0px 32px 0px;
+}
+
+.footer-info .copyright{
+    color: rgba(255, 255, 255, 0.40);
+    font-size: 16px;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
