--- a/style.css
+++ b/style.css
@@ -224,3 +224,80 @@ footer{
     font-weight: 400;
     line-height: normal;
 }
+
+.bonus-section-container{
+    display: flex;
+    justify-content: center;
+    gap: 24px;
+    padding-bottom: 178px;
+    padding-top: 32px;
+}
+
+.gif-boxs img{
+    height: 874px;
+}
+
+.category{
+    width: 450px;
+    height: 425px;
+    background-color: #111010;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.category::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.4);
+    z-index: 0;
+}
+
+.category span{
+    color: #fff;
+    opacity: 1;
+    font-size: 28px;
+    font-weight: 800;
+    position: relative;
+    z-index: 99;
+}
+
+.category-boxs{
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+}
+
+.category-1{
+    background-image: url(images/Flower\ 01.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+}
+
+.category-2{
+    background-image: url(images/Rectangle\ 4.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    position: relative;
+}
+
+.category-3{
+    background-image: url(images/Rectangle\ 5.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+}
+
+.category-4{
+    background-image: url(images/Rectangle\ 6.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+}
